testsuite/tests/impredicative/T17332.stderr

T17332.hs:13:7: error:
    • Could not deduce: a required by a use of ‘MkDict’
    • In the expression: MkDict
      In an equation for ‘aux’: aux = MkDict
